JBIDE-1175 (launch with big permgen) used args from JIRA
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@4471 a97e2381-89e5-4abb-bab3-167db6db766c